Implement custom image support
